@@ -95,6 +95,11 @@
         <jetty.server.version>9.2.25.v20180606</jetty.server.version>
         <!-- Empty for building without JaCoCo agent -->
         <jacococ.argLine/>
+        <!-- JaCoCo agent cannot be attached if ${argLine} is missed -->
+        <!-- It needs to detect memory leaks. -->
+        <!-- !!! Don't increase these parameters without special need !!! -->
+        <surefire.argLine>${jacococ.argLine} -Xms8m -Xmx64m</surefire.argLine>
+        <invoker.mavenOpts>-Xms64m -Xmx128m</invoker.mavenOpts>
         <openl.home>${project.build.directory}/openl-test</openl.home>
     </properties>
 
@@ -257,7 +262,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-invoker-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.1.0</version>
                     <configuration>
                         <projectsDirectory>it</projectsDirectory>
                         <pomIncludes>
@@ -274,6 +279,12 @@
                             <maven.compiler.target>1.7</maven.compiler.target>
                         </properties>
                         <showErrors>true</showErrors>
+                        <!-- Estimated test's time should not take more than 10 sec on 4х CPU (2GHz) -->
+                        <!-- with limited amount of memory. It allows to detect memory leaks. -->
+                        <!-- Special cases should be defined in invoker.properties file. -->
+                        <!-- !!! Don't increase these parameters without special need !!! -->
+                        <timeoutInSeconds>20</timeoutInSeconds>
+                        <mavenOpts>${invoker.mavenOpts}</mavenOpts>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -362,8 +373,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!-- JaCoCo agent cannot be attached if ${argLine} is missed -->
-                    <argLine>${jacococ.argLine} -XX:MaxPermSize=128m -Xms512m -Xmx2048m</argLine>
+                    <argLine>${surefire.argLine}</argLine>
                 </configuration>
             </plugin>
         </plugins>
